many shadow tweaks + better performing pcr
- Increased shadow distortion, leading to slightly better quality shadows when closer to the player.
- Options menu tweaks.
- Reduced PCR samples heavily. There is now a dithered 4 sample and a 16 sample mode.

--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -14,5 +14,8 @@ option.SKY_LIGHT_COLOR_B=Blue
 screen.SHADOWS=Shadows
 option.SHADOWS_ENABLED=Enable Shadows
 option.SHADOW_BIAS = Shadow Bias
-option.SOFTEN_SHADOWS=Soften Shadows (experimental)
+option.SOFTEN_SHADOWS=Soften Shadows (PCF)
+value.SOFTEN_SHADOWS.0=OFF
+value.SOFTEN_SHADOWS.1=Dithered 4 Sample
+value.SOFTEN_SHADOWS.2=16 Sample
 option.shadowMapResolution = Shadow Map Resolution
