--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -18,5 +18,5 @@ option.SOFTEN_SHADOWS=Soften Shadows (PCF)
 value.SOFTEN_SHADOWS.0=OFF
 value.SOFTEN_SHADOWS.1=Dithered 4 Sample
 value.SOFTEN_SHADOWS.2=9 Sample
-value.SOFTEN_SHADOWS.3=16 Sample
+value.SOFTEN_SHADOWS.3=Blurred 16 Sample
 option.shadowMapResolution = Shadow Map Resolution
