--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -1,3 +1,5 @@
+option.AMBIENT = Ambient
+
 
 screen.LIGHT_COLORS=Light Colors
 screen.BLOCK_LIGHT=Block Light Color
@@ -7,16 +9,26 @@ option.BLOCK_LIGHT_COLOR_B=Blue
 option.BLOCK_LIGHT_BRIGHTNESS=Brightness
 
 screen.SKY_LIGHT=Sky Light Color
+option.CUSTOM_SKY_COLOR=Use Custom Sky Color?
 option.SKY_LIGHT_COLOR_R=Red
 option.SKY_LIGHT_COLOR_G=Green
 option.SKY_LIGHT_COLOR_B=Blue
+option.SKY_LIGHT_BRIGHTNESS=Brightness
+
+screen.SUN_LIGHT=Sun Light Color
+option.SUN_LIGHT_COLOR_R=Red
+option.SUN_LIGHT_COLOR_G=Green
+option.SUN_LIGHT_COLOR_B=Blue
+option.SUN_LIGHT_BRIGHTNESS=Brightness
 
 screen.SHADOWS=Shadows
 option.SHADOWS_ENABLED=Enable Shadows
-option.SHADOW_BIAS = Shadow Bias
-option.SOFTEN_SHADOWS=Soften Shadows (PCF)
-value.SOFTEN_SHADOWS.0=OFF
-value.SOFTEN_SHADOWS.1=Dithered 4 Sample
-value.SOFTEN_SHADOWS.2=9 Sample
-value.SOFTEN_SHADOWS.3=Blurred 16 Sample
+option.SHADOW_BRIGHTNESS = Shadow Brightness
 option.shadowMapResolution = Shadow Map Resolution
+option.SHADOW_BIAS = Shadow Bias
+option.SHADOW_DISTORT_FACTOR = Shadow Distort Factor
+
+screen.SKY=Sky
+option.USE_FOG_COLOR_FOR_SKY=Solid Color Sky
+option.SOLID_COLOR_CLOUDS=Solid Color Clouds
+
